--- a/billing_stepA1.html
+++ b/billing_stepA1.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <?php
 require('php/functions.php');
-
-if(!isset($_SESSION['billing_order'])){
-    header("Location: billing_step1.php");
-}
-
 ?>
 <html lang="en">
     <head>
@@ -23,21 +18,6 @@ if(!isset($_SESSION['billing_order'])){
         <script src="js/main.js"></script>
         <script src="js/charts.js"></script>
         <script src="js/sorttable.js"></script>
-
-        <script type="text/javascript">
-
-            function SendInvoice(el) {
-                var id = $(el).attr('id');
-            
-                $.ajax({
-                    type: 'post',
-                    data: {send_invoice: ' ', id: id},
-                    url: "/php/ajax.php",
-                    success: function(result){
-                        alert("Email has been send :)");
-                }});
-            };
-        </script>
     </head>
     <body>
         <div id="main">
@@ -61,14 +41,14 @@ if(!isset($_SESSION['billing_order'])){
                     <div class="step">
                         <progress>Unknown</progress>
                         <button type="button" formaction="billing_step1.html">&#x274C; Cancel invoice</button>
-                        <button id="<?php echo $_SESSION['billing_order']; ?>" OnClick='SendInvoice(this)'>&#x1F4BE; Send &amp; save invoice</button>
+                        <button>&#x1F4BE; Print &amp; save invoice</button>
                     </div>
                 </header>
                 <div class="main">
                     <div class="row">
                         <div class="cont5 card">
                             <header>
-                                <h4 class="title">Creating invoice for order <b><?php echo $_SESSION['billing_order']; ?></b></h4>
+                                <h4 class="title">Creating invoice for order <b>8793645</b></h4>
                                 <p class="description">Select items you want to add to invoice</p>
                             </header>
                             <table class="products sortable">
@@ -115,7 +95,7 @@ if(!isset($_SESSION['billing_order'])){
                         </div>
                         <div class="cont7 card">
                             <header>
-                                <h4 class="title">Invoice &#8470; <b>1</b> for order <b><?php echo $_SESSION['billing_order']; ?></b></h4>
+                                <h4 class="title">Invoice &#8470; <b>1</b> for order <b>8793645</b></h4>
                                 <p class="description">Generated invoice</p>
                             </header>
                             <object data="make_invoice_pdf.php" type="application/pdf" width="100%" height="1000px">
